--- a/package.json
+++ b/package.json
@@ -4,14 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npx wdio run ./wdio.conf.js --spec visitWebsite.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "webdriverio": "^7.1.1"
+    "@wdio/cli": "^7.2.1"
   },
   "devDependencies": {
-    "@wdio/mocha-framework": "^7.1.2"
+    "@wdio/local-runner": "^7.2.1",
+    "@wdio/mocha-framework": "^7.2.1",
+    "@wdio/spec-reporter": "^7.2.1",
+    "chromedriver": "^89.0.0",
+    "wdio-chromedriver-service": "^7.0.0"
   }
 }
